freesia/k8s/apps/prom-stack-v3/thanos/thanos-rule/ingress-grpc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thanos-rule-grpc
  labels:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: rule
  annotations: 
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: thanos-ruler-grpc.harvestasya.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: thanos-rule-grpc
                port:
                  number: 10901
